# kitsap_commute_MCP

./: .dockerignore  .env.example  .env.test  .gitignore  CLAUDE.md  Dockerfile  FERRY_API_README.md  README.md  SCHEDULE_UPDATER_README.md  commute_server.py  config.py  docker-compose.yml  elasticsearch_initialization.py  elasticsearch_server.py  explore_ferry_api.py  ferry_api.py  ferry_terminals.py  fetch_and_format_schedules.py  king_county_tech_events.json  pyproject.toml  requirements.txt  test_ferry_api.py  test_reorganization.sh  update_ferry_schedules.py  utilities.py  validate_docker.py  verify_schedule_data.py
backend/: main.py
data/: README.md  elasticsearch_initialization.py  ferry_schedules.json  ferry_terminals.json  sample_events.json
data/todo/: CODE_REVIEW_ACTION_PLAN.md  HTML_GENERATION_USAGE.md  REORGANIZATION_PLAN.md  travel_comparison_template.html
frontend/: .gitignore  package.json  webpack.config.js
frontend/public/: index.html
frontend/src/: App.js
mcp/: commute_planner.py  fetch_terminals.py  google_maps_server.py  server.py  wsdot_ferry_server.py
setup/: __init__.py  elasticsearch_setup.py
